--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -32,15 +32,7 @@ $vr-breakpoints: (
 
 // Demo: grid overlay (optional)
 // -------------------------------------
-//body {
-//  @include vr-grid(
-//          $lines: true,
-//          $highlight: false,
-//          $detail: false
-//  );
-//}
-
-.style {
+.style, .vr {
   @include vr-grid(
           $lines: true,
           $highlight: true,
