--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,5 @@
 @import "./vertical-rhythm.scss";
+@import "./flexbox.scss";
 
 // Vertical Rhythm
 // https://jhildenbiddle.github.io/vertical-rhythm-reset
